The buttons are moved to the center. Fixed bug of jumping drop-down menu. Disabled outline on focus and button activation.

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -277,7 +277,7 @@ section {
 
 .membership {
   padding-top: 0px;
-  float: right;
+  /*float: right;*/
 }
 
 .membership-product {
