--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -393,14 +393,6 @@
     padding-right: 10px;
   }
 
-  /*.white .btn {*/
-    /*min-width: 104px;*/
-  /*}*/
-
-  /*.white button.btn:hover {*/
-    /*min-width: 104px;*/
-  /*}*/
-
   .select-style select {
     font-size: 9pt;
     margin-bottom: 10px;
@@ -464,10 +456,10 @@
     font-size: 9pt;
   }
 
-  .membership-form input:not([type="checkbox"]):not([type="radio"]), textarea, select {
-    margin-bottom: 10px;
-    height: 41px;
-  }
+  /*.membership-form input:not([type="checkbox"]):not([type="radio"]), textarea, select {*/
+    /*margin-bottom: 10px;*/
+    /*height: 41px;*/
+  /*}*/
 
   .dropdown-menu {
     font-size: 10pt;
